# winext

./: CMakeLists.txt  Development.md
.github/workflows/: build.yaml
examples/: CMakeLists.txt  README.md  echoclient.cpp  echoserver.cpp  echoserver.hpp  echoserver2.cpp  echoserver_coro.cpp  echoserver_movable.cpp  echoserver_movable.hpp  echoserver_session.hpp  namedpipe.cpp
examples/http/: beast_client.cpp  beast_server.cpp
include/winext/: named_pipe.hpp  named_pipe_acceptor.hpp  named_pipe_client_details.hpp  named_pipe_protocol.hpp  named_pipe_server_details.hpp
include/winext/http/: basic_http_handle.hpp  convert.hpp  http.hpp  temp.hpp
tests/: CMakeLists.txt  http_server_test.cpp  named_pipe_test.cpp  test_client.hpp
